...
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:ems="10"
                android:id="@+id/loginEmailTxt"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:hint="@string/registerEmailPlaceholder" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:ems="10"
                android:id="@+id/loginPasswordTxt"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:hint="@string/registerPasswordPlaceholder" />

            <LinearLayout
                android:orientation="horizontal"
...
